# meshtastic-mcp

./: .cursorrules  .dockerignore  .editorconfig  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  .windsurfrules  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVENTIONS.md  Dockerfile  GEMINI.md  README.md  SECURITY.md  llms.txt  pyproject.toml  run-tests.sh  server.json
.claude/: session-context.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/evals/: README.md  canonical-tasks.md  results-template.csv  score.sh  tool-selection.csv
.github/workflows/: ci.yml  release.yml  scorecard.yml
docs/: bench-setup.md  local-models.md  nightly.md  power-meter.md  sdk-cli-bridge.md  sim-realism-plan.md
scripts/: build_android_apk.sh  build_apple.sh  build_meshtasticd.sh  check_spdx.py  ci_android_app_loop.py  ci_apple_app_loop.py  ci_atak_app_loop.py  ci_device_mesh_e2e.py  com.meshtastic.fleetsuite.menubar.plist  com.meshtastic.fleetsuite.plist  datadog-dashboard.json  fleetsuite-supervisor.sh  fleetsuite.sh  install-launchd.sh  install-menubar.sh  validate_skills.py  web-dev.sh
src/meshtastic_mcp/: __init__.py  __main__.py  admin.py  boards.py  camera.py  capabilities.py  config.py  config_snapshot.py  connection.py  devices.py  doctor.py  fixtures.py  flash.py  hw_tools.py  info.py  inject.py  input_events.py  llama_server.py  local_model.py  log_query.py  lora_compliance.py  menubar.py  ocr.py  pa_sweep.py  pio.py  port_recovery.py  power_meter.py  recovery.py  registry.py  rf_oracle.py  sdk_cli.py  sdr.py  serial_session.py  server.py  uhubctl.py  userprefs.py
src/meshtastic_mcp/cli/: __init__.py  _flashlog.py  _fwlog.py  _history.py  _reproducer.py  _uicap.py  meshinject.py  test_tui.py
src/meshtastic_mcp/emulator/: apple_sim.py  avd.py  native_node.py
src/meshtastic_mcp/recorder/: __init__.py  parsers.py  recorder.py  rotating.py
src/meshtastic_mcp/replay/: __init__.py  build.py  capture.py  engine.py  fuzz.py  metrics.py  observer.py  sim.py  tak.py  tak_server.py
src/meshtastic_mcp/skills/meshtastic-device-ops/: SKILL.md
src/meshtastic_mcp/skills/meshtastic-e2e/: SKILL.md
src/meshtastic_mcp/skills/meshtastic-e2e/references/: emulator-lab.md  harness.md  journeys.md  loop-config-writeback.md  (+10 more)
src/meshtastic_mcp/skills/meshtastic-org-knowledge/: SKILL.md
src/meshtastic_mcp/web/: __init__.py  __main__.py  app.py  camera_worker.py
src/meshtastic_mcp/web/db/: __init__.py  database.py  repo_builds.py  repo_cameras.py  repo_devices.py  repo_flash.py  repo_nightly.py  repo_runs.py  repo_settings.py
src/meshtastic_mcp/web/services/: __init__.py  activity.py  builder.py  camera_stream.py  control.py  datadog.py  discovery.py  firmware.py  github_issues.py  identity.py  keepalive.py  native.py  nightly.py  nightly_analysis.py  nightly_report.py  nightly_soak.py  portlock.py  power.py  recovery.py  scrub.py  serial_monitor.py  test_runner.py
src/meshtastic_mcp/web/ws/: __init__.py  hub.py
tests/: README.md  _bench.py  _port_discovery.py  _power.py  _recovery.py  conftest.py  test_00_bake.py  tool_coverage.py
tests/admin/: test_channel_url_roundtrip.py  test_config_roundtrip.py  test_owner_survives_reboot.py
tests/fleet/: __init__.py  test_psk_seed_isolates_runs.py
tests/mesh/: _receive.py  test_bidirectional.py  test_broadcast_delivers.py  test_direct_with_ack.py  test_mesh_formation.py  test_nexthop_multihop_recovery.py  test_peer_offline_recovery.py  test_traceroute.py
tests/monitor/: test_boot_log_no_panic.py
tests/provisioning/: __init__.py  test_admin_key_baked.py  test_bake_region_modem_slot.py  test_unset_region_blocks_tx.py  test_userprefs_survive_factory_reset.py
tests/recovery/: __init__.py  conftest.py  test_list_hubs.py  test_power_cycle_preserves_userprefs.py  test_power_cycle_roundtrip.py  test_recovery_ladder.py
tests/telemetry/: test_device_telemetry_broadcast.py  test_telemetry_request_reply.py
tests/ui/: __init__.py  _ocr_match.py  _screen_log.py  conftest.py  test_input_fn_jump.py  test_input_fn_oob.py  test_input_menu.py  test_input_message_scroll.py  test_input_navigation.py  test_input_node_scroll.py  test_input_user_button.py  test_screen_clickthrough.py  test_screen_content.py  test_screen_keep_on.py
tests/unit/: conftest.py  test_admin_factory_reset.py  test_apple_sim.py  test_avd_physical.py  test_bake_dfu_retry.py  test_bench_roles.py  test_boards.py  test_build_flags.py  test_camera_orient.py  test_ci_atak_app_loop.py  test_ci_device_mesh_e2e.py  test_cli_install.py  test_config_snapshot.py  test_connection_close.py  test_connection_tcp.py  test_devices.py  test_doctor.py  test_emulator_avd.py  test_erase_and_flash.py  test_evals_dataset.py  test_fake_nodedb_generator.py  test_flash_preflight.py  test_hub_power_probe.py  test_hw_tool_resolver.py  test_input_event_codes.py  test_linger_tx_race.py  test_local_model.py  test_lora_compliance.py  test_makereport_timeout.py  test_mcp_surface.py  test_menubar.py  test_native_node.py  test_nightly_analysis.py  test_nightly_github.py  test_nightly_report_render.py  test_pio_wrapper.py  test_port_reconnect_hardening.py  test_port_recovery.py  test_power_meter.py  test_receive_listener_signature.py  (+35 more)
tools/: import_defcon_logs.py
web-ui/: README.md  env.d.ts  package-lock.json
web-ui/src/: App.vue  ansi.ts  main.ts  types.ts
web-ui/src/api/: client.ts
web-ui/src/components/: AppBar.vue  BuildQueue.vue  CameraFeed.vue  CameraManager.vue  DatadogPanel.vue  DeviceCard.vue  DeviceControls.vue  DeviceGrid.vue  DeviceSettings.vue  FirmwareRef.vue  KeepAlivePanel.vue  LogPane.vue  NativeManager.vue  NightlyPanel.vue  NightlyReportCard.vue  PacketPane.vue  RunControls.vue  SerialLogPane.vue  TestDashboard.vue  TestResultsPane.vue  TestTree.vue  TierCounters.vue
web-ui/src/stores/: actions.ts  builds.ts  cameras.ts  datadog.ts  devices.ts  firmware.ts  keepalive.ts  nightly.ts  tests.ts  ws.ts
(+3 files in other folders)
